platform/homepage/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml

            - name: config
              mountPath: /app/config/services.yaml
              subPath: services.yaml

            - name: config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml

            - name: config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml

            - name: logs
              mountPath: /app/config/logs

      volumes:
        - name: config
          configMap:
            name: homepage-config

        - name: logs
          emptyDir: {}
