platform/homepage/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  ports:
    - port: 80
      targetPort: 3000
